[package]
name = "wait-for-them"
version = "0.3.1"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2018"
description = "Waits for TCP ports to be opened"
license = "GPL-3.0"
readme = "README.md"
keywords = ["cli", "wait"]
repository = "https://github.com/shenek/wait-for-them"
categories = ["command-line-utilities"]

[features]
default = []
ui = ["indicatif"]

[dependencies]
futures = "0.3"
regex = "1"
tokio = {version="1.25", features=["time", "net" ,"process", "macros", "rt", "rt-multi-thread"]}
indicatif = {version="0.17", features=["tokio"], optional=true}

[dev-dependencies]
assert_cmd = "~2.0"

[[bin]]
name = "wait-for-them"
path = "src/main.rs"
