[package]
name = "wait-for-them"
version = "0.4.0"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2021"
description = "Waits for TCP ports to be opened or for 200 status on http(s) urls"
license = "GPL-3.0"
readme = "README.md"
keywords = ["cli", "wait"]
repository = "https://github.com/shenek/wait-for-them"
categories = ["command-line-utilities"]

[features]
default = ["ui", "http"]
ui = ["indicatif"]
http = ["hyper", "hyper-tls", "http-body-util", "bytes"]

[dependencies]
futures = "0.3"
bytes = {version="1.5", optional=true}
indicatif = {version="0.17", features=["tokio"], optional=true}
http-body-util = {version="0.1", optional=true}
hyper = {version="1.0.1", features=["client", "http1", "http2"], optional=true}
hyper-tls = {version="0.6", optional=true}
hyper-util = {version="0.1", features=["client-legacy", "http1", "http2", "tokio"]}
regex = "1"
tokio = {version="1.34", features=["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}

[dev-dependencies]
assert_cmd = "~2.0"

[lib]
name = "wait_for_them"
path = "src/lib.rs"
doc = true

[[bin]]
name = "wait-for-them"
path = "src/main.rs"
doc = false
